2025.10.18/Review/Cody.md
---
layout: default
title: Cody
---


[[Student/Cody]]
[[Level/]]
[[Date/2025-10-18]]

### 原文

> [!NOTE]- 原文
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them get well-knowned by making videos on social media. Some of them become famous by singing in front of a large number of people. In my opinion, being this kind of person isn't a simple thing.
>
> One of the reasons is that if you want to let more people remember you, you must learn or improve some skills first. Doing this is difficult but important. And then, you should find some good ways to make you special and hard to forget in others' heart. For example, my friend Lucy is a teenage pop stars, she said she practised singing for many hours every day, even she had a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find the talent when she is trying. Besides, they can learn from their favourite pop stars and be a kind and successful person.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention on studying and school classes.

### ❌ 错误批注（Error Annotations）

> [!abstract]- 批注
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them get **well-knowned** <span style="color:red">（词形：well-known）</span> by making videos on social media. Some of them become famous by singing in front of a large number of people. In my opinion, being this kind of **person** <span style="color:deepskyblue; text-decoration: underline;">（用词自然）</span> isn't a simple thing.
>
> One of the reasons is that if you want to let more people remember you, you must learn or improve some skills first. Doing this is difficult but important. And then, you should find some good ways to make you special and hard to forget in others' **heart** <span style="color:red">（名词：hearts）</span>. For example, my friend Lucy is **a teenage pop stars** <span style="color:red">（数一致：a teenage pop star）</span>, she said she practised singing for many hours every day, even **she** <span style="color:red">（连接：even when she）</span> had a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find the talent when **she is trying** <span style="color:red">（指代不清：they are trying）</span>. Besides, they can learn from their favourite pop stars and be a kind and successful person.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention **on** <span style="color:red">（介词：to）</span> studying and school classes.

### 🌟 优点（Strengths）
- 观点明确，论据包含“努力—影响—榜样”三层。
- 有多处衔接词，如 "What's more", "Besides"。
- 语气积极，有总结与建议。

### 🧾 错误清单（Error Summary）
| 原句 | 建议改法 | 中文解释 |
|------|-----------|-----------|
| well-knowned | well-known | 形容词词形错误。
| others' heart | others' hearts | 名词复数。
| a teenage pop stars | a teenage pop star | 数一致。
| even she had a fever | even when she had a fever | 从属连词缺失。
| find the talent when she is trying | ... when they are trying | 指代一致。
| pay more attention on | pay more attention to | 介词搭配。

### 🏆 等级评估（FCE / B2）
| Criterion | Score | Comment |
|------------|--------|----------|
| Content | 4/5 | 论点充分并贴合题意。
| Communicative Achievement | 4/5 | 能较好说服读者并保持合适语域。
| Organisation | 4/5 | 结构清晰，有开头、分论点与结尾。
| Language | 3/5 | 存在数一致与搭配问题，但词汇较多样。
| **Total** | 15/20 | 表达流畅，语言准确度仍可提升。 

### 💡 进阶建议（Recommendations for Improvement）
- 注意代词与名词数一致，避免 she/they 混用。
- 扩展高级连接词：moreover, consequently, nevertheless。
- 举例时加入数据或具体场景增强说服力。
- 使用更丰富的形容词/短语：dedicated practice, long-term commitment, public recognition。

### ✨ 润色版本（Polished Version）
> [!question]- 润色版本
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them become well-known by making videos on social media, and some become famous by singing in front of a large number of people. In my opinion, being this kind of person isn't a simple thing.
>
> One of the reasons is that if you want more people to remember you, you must learn or improve some skills first. Doing this is difficult but important. Then you should find good ways to make yourself special and hard to forget in others' hearts. For example, my friend Lucy is a teenage pop star. She said she practised singing for many hours every day, even when she had a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find their talent when they are trying. Besides, they can learn from their favourite pop stars and become kind and successful people.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention to studying and school classes.
