2025.10.19/Review/Cody.md
---
layout: default
title: Cody
---

[[Student/Cody]]
[[Level/PET]]
[[Date/2025-10-19]]

### 📝原文

> [!NOTE]- 原文
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them get well-knowned by making videos on social media. Some of them become famous by singing in front of a large number of people. In my opinion, being this kind of person isn't a simple thing.
>
> One of the reasons is that if you want to let more people remember you, you must learn or improve some skills first. Doing this is difficult but important. And then, you should find some good ways to make you special and hard to forget in others' heart. For example, my friend Lucy is a teenage pop stars, she said she practised singing for many hours every day, even she had a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find the talent when she is trying. Besides, they can learn from their favourite pop stars and be a kind and successful person.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention on studying and school classes.

### ❌ 错误批注（Error Annotations）

> [!abstract]+ 批注
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them get **well-knowned** <span style="color:red">（词形：well-known）</span> by making videos on social media. Some of them become famous by singing in front of a large number of people. In my opinion, **being this kind of person** <span style="color:red">（表达：being a pop star）</span> isn't a simple thing.
>
> One of the reasons is that if you want to let more people remember you, you must learn or improve some skills first. Doing this is difficult but important. And then, you should find some good ways to make **you** <span style="color:red">（代词：yourself）</span> special and hard to forget in others' **heart** <span style="color:red">（复数：hearts）</span>. For example, my friend Lucy is **a teenage pop stars** <span style="color:red">（数一致：a teenage pop star）</span>, she said she practised singing for many hours every day, even **she had** <span style="color:red">（连接/时态：when she had / even when she had）</span> a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find the talent when **she is trying** <span style="color:red">（指代：they are trying）</span>. Besides, they can learn from their favourite pop stars and be **a** <span style="color:red">（冠词：Ø/—）</span> kind and successful **person** <span style="color:red">（数：people/role model）</span>.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention **on** <span style="color:red">（介词：to）</span> studying and school classes.

### 🌟 优点（Strengths）
- 结构完整：观点—理由—例子—总结。
- 主题聚焦，论证连贯。
- 能用举例增强说服力。

### 🧾 错误清单（Error Summary）
| 原句 | 建议改法 | 中文解释 |
|------|-----------|-----------|
| well-knowned | well-known | 词形错误。
| being this kind of person | being a pop star | 表达不自然。
| make you special | make yourself special | 代词反身。
| others' heart | others' hearts | 名词复数。
| a teenage pop stars | a teenage pop star | 数一致。
| even she had a fever | even when she had a fever | 连接结构。
| when she is trying | when they are trying | 指代一致。
| a kind and successful person | a kind and successful people/role model | 数与用词。
| pay more attention on | pay more attention to | 介词搭配。

### 🏆 等级评估（Level Assessment / Writing Evaluation）

| Criterion | Score | Comment |
|------------|--------|----------|
| Content | 4/5 | 观点明确，例证到位。
| Communicative Achievement | 3/5 | 表达得体但准确度一般。
| Organisation | 3/5 | 结构清晰，过渡语可更丰富。
| Language | 2/5 | 搭配与一致性问题较多。
| **Total** | 12/20 | 思路清晰，语言准确度需提升。

### 💡 进阶建议（Recommendations for Improvement）
- 优化指代一致与数一致（star—they/them；heart—hearts）。
- 使用更准确名词与表达（role model, influence）。
- 增强过渡：besides, moreover, therefore。
- 例子可加细节（训练频率、粉丝影响）。

### ✨ 润色版本（Polished Version）
> [!question]- 润色版本
> Do you believe that there are many young people about 14 or 15 years old who are famous pop stars? Some of them get well-known by making videos on social media. Some of them become famous by singing in front of a large number of people. In my opinion, being a pop star isn't a simple thing.
>
> One of the reasons is that if you want to let more people remember you, you must learn or improve some skills first. Doing this is difficult but important. And then, you should find some good ways to make yourself special and hard to forget in others' hearts. For example, my friend Lucy is a teenage pop star. She said she practised singing for many hours every day, even when she had a fever.
>
> What's more, teenage pop stars also influence their fans. If a star loves dancing, the fans may get interested in dancing too, and maybe someone can find their talent when they are trying. Besides, they can learn from their favourite pop stars and be kind and successful.
>
> In short, teenage pop stars can continue their activities, but I think they and their fans should pay more attention to studying and school classes.


